Upload The Design

--- a/css/main.css
+++ b/css/main.css
@@ -210,3 +210,9 @@ body {
         margin-top: 50px;
     }
 }
+@media (max-width:991px) {
+    .attribution{
+            position: relative;
+            left: 0;
+        }
+}
